--- a/NewsFeedWebhose/package.json
+++ b/NewsFeedWebhose/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "moment": "^2.19.1",
     "morgan": "~1.8.1",
     "os-locale": "^2.1.0",
     "serve-favicon": "~2.4.2",
