--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-sanitizer": "^1.0.2",
+    "express-session": "^1.15.6",
     "moment": "^2.19.1",
     "morgan": "~1.8.1",
     "os-locale": "^2.1.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "serve-favicon": "~2.4.2",
     "webhoseio": "^1.0.2"
   }
