--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "os-locale": "^2.1.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "passport-oauth2": "^1.4.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.2",
     "webhoseio": "^1.0.2"
   }
